Fix Showcase white spaces
Rectangle block should have more white spaces than text block.

--- a/src/css/component/showcase.css
+++ b/src/css/component/showcase.css
@@ -8,6 +8,10 @@
 	gap: var(--space-huge) 10%;
 	grid-template-columns: var(--grid-template-columns);
 	list-style-type: none;
+	margin-bottom: 1.75rem;
+	margin-block-end: var(--space-large);
+	margin-top: 1.75rem;
+	margin-block-start: var(--space-large);
 	padding-left: 0;
 }
 
